--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gauge-curve",
   "version": "1.0.1",
   "description": "Gauge Curve",
-  "main": "./src/index.ts",
+  "main": "./index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
